# T4127-Engine

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
payroll_calc/: __init__.py  __main__.py  calculator.py  config.py  download_cra.py  main.py  mcp_server.py  models.py  pdoc_query.py  rounding.py
payroll_calc/api/: routes.py
payroll_calc/data/: loader.py  schema.py
payroll_calc/formulas/: annual_income.py  bonus.py  bpaf.py  cpp.py  credits.py  ei.py  federal_tax.py  per_period_tax.py  province_specific.py  provincial_tax.py
payroll_calc/schemas/: openai_tool.json
payroll_calc/tables/: t4032_generator.py
payroll_calc/tests/: extract_pdf_reference.py  test_cli.py  test_mcp_server.py  test_regression.py  test_t4032_exhaustive.py
